[package]
name = "dist-saver"
version = "0.1.0"
edition = "2021"
description = "SAVER with distributed key generation and re-encryption/key-switching"


[dependencies]
ark-ff = { version = "^0.4.1", default-features = false }
ark-ec = { version = "^0.4.1", default-features = false }
ark-std = { version = "^0.4.0", default-features = false}
ark-poly = { version = "^0.4.1", default-features = false }
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
ark-relations = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-groth16 = { version = "^0.4.0", default-features = false }
rayon = { version = "1", optional = true}
digest = { version = "0.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
zeroize = { version = "1.6.0", features = ["derive"] }
blake2 = { version = "0.10", default-features = false }
itertools = "0.10.5"

[dev-dependencies]
serde_json = "1.0"
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "ark-groth16/std", "ark-r1cs-std/std", "ark-relations/std"]
print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-groth16/parallel", "rayon", "ark-r1cs-std/parallel"]
